--- a/g-now/src/app/header/header.component.html
+++ b/g-now/src/app/header/header.component.html
@@ -1,1 +1,12 @@
-<p>header works!</p>
+<div id="container">
+	<header>
+		<ul>
+			<a href="#home"><li>Inicio</li></a>
+			<a href="#places"><li>Mis lugares</li></a>
+			<a href="#radar"><li>Radar</li></a>
+			<a href="#ten"><li>Previsión 10</li></a>
+			<a href="#air"><li>Aire</li></a>
+			<a href="#moons"><li>Lunas</li></a>
+		</ul>
+	</header>
+</div>
