--- a/g-now/src/app/footer/footer.component.html
+++ b/g-now/src/app/footer/footer.component.html
@@ -1,1 +1,10 @@
-<p>footer works!</p>
+<footer class="footer">
+    <div class="content has-text-centered">
+      <p>
+        <strong>G-Now</strong> by <a href="https://jgthms.com">Oriol Giner Díaz</a>.
+        The source code is licensed with
+        <a href="http://opensource.org/licenses/mit-license.php">MIT</a>.
+        You can find the <strong>source code</strong> in <a href="https://github.com/oriolgds/G-Now">My Repo</a>.
+      </p>
+    </div>
+</footer>
