--- a/g-now/src/styles.css
+++ b/g-now/src/styles.css
@@ -13,3 +13,5 @@ body {
   font-variation-settings:
     "wdth" 100;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
