--- a/g-now/src/app/header/header.component.css
+++ b/g-now/src/app/header/header.component.css
@@ -2,10 +2,15 @@
 	padding: 10px;
 }
 header {
+	transition: 400ms;
 	width: auto;
 	background-color: rgba(22, 255, 205, 0.5);
 	border-radius: 100px;
 	padding: 15px 20px;
+}
+header:hover {
+	transition: 200ms;
+	border-radius: 20px;
 }
 header > ul {
 	list-style-type: none;
@@ -29,7 +34,7 @@ ul a {
 	border-radius: 50px;
 }
 ul a:hover {
-	transition: 100ms;
+	transition: 200ms;
 	border-radius: 5px;
 
 }
